# healthcare-api

./: .gitignore  README.md
healthcare-api-python/: .env.example  main.py  requirements.txt
healthcare-api-rust/: .env.example  Cargo.toml
healthcare-api-rust/src/: main.rs
