[package]
name = "healthcare-api-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1